new file:   app/api/send-emails-once/route.js 	new file:   app/api/send-emails/route.js 	modified:   package.json 	new file:   scripts/003_add_email_sent_column.sql 	new file:   scripts/send-first-100.js 	new file:   scripts/send-pending-emails.js 	new file:   scripts/test-cron.js 	new file:   vercel.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint",
     "start": "next start",
     "send-bulk-emails": "node scripts/send-bulk-emails.js",
-    "test-env": "node scripts/test-env.js"
+    "test-env": "node scripts/test-env.js",
+    "send-pending-emails": "node scripts/send-pending-emails.js",
+    "send-first-100": "node scripts/send-first-100.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
